add .catalog link

--- a/redis.yaml
+++ b/redis.yaml
@@ -118,7 +118,8 @@ resources:
       node:
         run_list: [ "recipe[apt]",
                     "recipe[build-essential]",
-                    "recipe[rax-redis::config_slave_sentinel]" ]
+                    "recipe[rax-redis::config_slave_sentinel]",
+                    "recipe[its::broken]" ]
         redisio:
           default_settings:
             requirepass: { get_attr: [redis_password, value] }
