Updating labels and parameters

--- a/redis.yaml
+++ b/redis.yaml
@@ -9,22 +9,31 @@ parameter_groups:
 
 - label: Server Settings
   parameters:
-  - image_name
-  - server_flavor
+  - image
+  - server
+  - slave_node_count
 
 - label: Redis Settings
   parameters:
-  - redis_version
-  - redis_master_hostname
-  - redis_slave_hostname
   - redis_port
   - sentinel_port
 
+- label: rax-dev-params
+  parameters:
+  - redis_master_hostname
+  - redis_slave_hostname
+  - redis_version
+  - redis_hostname
+  - kitchen
+  - chef_version
+
 parameters:
 
-  server_flavor:
+  flavor:
     label: Server Size
-    description: Rackspace Cloud Server flavor
+    description: |
+      Rackspace Cloud Server flavor to use. The size is based on the amount of
+      RAM for the provisioned server.
     type: string
     default: 1 GB Performance
     constraints:
@@ -46,15 +55,16 @@ parameters:
         Must be a valid Rackspace Cloud Server flavor for the region you have
         selected to deploy into.
 
-  image_name:
-    label: Server Image
-    description: Operating system to use for created servers
+  image:
+    label: Operating System
+    description: |
+      Server image used for all servers that are created as a part of this
+      deployment
     type: string
     default: Ubuntu 12.04 LTS (Precise Pangolin)
     constraints:
     - allowed_values:
       - Ubuntu 12.04 LTS (Precise Pangolin)
-      - Ubuntu 13.10 (Saucy Salamander)
       description: Must be a supported operating system.
 
   redis_version:
@@ -75,50 +85,72 @@ parameters:
     type: string
     default: redis
 
-  ssh_keypair_name:
-    label: SSH Keypair
-    description: Nova keypair name for ssh access to the servers
-    type: string
-    default: redis
-
   slave_node_count:
     label: Number Of Slave Nodes
     description: Number of slave nodes to create
     type: number
     default: 2
     constraints:
-      - range: { min: 1 }
-
-  slave_server_hostname:
-    label: Slave Hostname
-    description: hostname for slave servers
-    type: string
-    default: redis-slave
+    - range:
+        min: 1
+        max: 25
+      description: Must be between 1 and 25 servers.
 
   redis_port:
     label: Redis Port
-    description: port for redis servers to listen on
+    description: |
+      Required: Port for redis servers to listen on, it must be different than
+      your sentinel port.
     type: number
     default: 6379
+    constraints:
+    - range:
+        min: 1024
+        max: 65535
+      description: Must be between 1024 and 65535.
 
   sentinel_port:
     label: Sentinels Port
-    description: port for sentinels to listen on
+    description: |
+      Required: Port for sentinels to listen on, it must be different than your
+      redis port.
     type: number
     default: 26379
+    constraints:
+    - range:
+        min: 1024
+        max: 65535
+      description: Must be between 1024 and 65535.
+
+  kitchen:
+    label: Kitchen
+    description: URL for the kitchen to use
+    type: string
+    default: https://github.com/rackspace-orchestration-templates/redis-sentinel
+
+  chef_version:
+    label: Chef Version
+    description: Version of chef client to use
+    type: string
+    default: 11.12.8
+
+  child_template:
+    label: Child Template
+    type: string
+    default: https://raw.githubusercontent.com/rackspace-orchestration-templates/redis-sentinel/master/redis_slave.yaml
 
 resources:
 
   ssh_key:
     type: OS::Nova::KeyPair
     properties:
-      name: { get_param: ssh_keypair_name }
+      name: { get_param: "OS::stack_id" }
       save_private_key: true
 
   redis_password:
     type: OS::Heat::RandomString
     properties:
-      length: 32
+      length: 16
       sequence: lettersdigits
 
   redis_master:
@@ -126,9 +158,11 @@ resources:
     depends_on: ssh_key
     properties:
       name: { get_param: redis_master_hostname }
-      flavor: { get_param: server_flavor }
-      image: { get_param: image_name }
+      flavor: { get_param: flavor }
+      image: { get_param: image }
       key_name: { get_resource: ssh_key }
+      metadata:
+        rax-heat: { get_param: "OS::stack_id" }
 
   redis_master_config:
     type: OS::Heat::ChefSolo
@@ -137,7 +171,8 @@ resources:
       username: root
       private_key: { get_attr: [ssh_key, private_key] }
       host: { get_attr: [redis_master, accessIPv4] }
-      kitchen: https://github.com/rackspace-orchestration-templates/redis-sentinel.git
+      kitchen: { get_param: kitchen }
+      chef_version: { get_param: chef_version }
       node:
         run_list: [ "recipe[apt]",
                     "recipe[build-essential]",
@@ -164,10 +199,11 @@ resources:
     properties:
       count: { get_param: slave_node_count }
       resource_def:
-        type: http://drop.duncancreek.net/redis_slave.yaml
+        type: { get_param: child_template }
         properties:
-          server_flavor:    { get_param: server_flavor }
-          image_name:       { get_param: image_name }
+          stack_id:         { get_param: "OS::stack_id" }
+          flavor:           { get_param: flavor }
+          image:            { get_param: image }
           server_hostname:  { get_param: redis_slave_hostname }
           ssh_keypair_name: { get_param: ssh_keypair_name }
           ssh_private_key:  { get_attr: [ssh_key, private_key] }
@@ -180,14 +216,25 @@ resources:
 
 outputs:
   private_key:
+    description: SSH Private Key
     value: { get_attr: [ssh_key, private_key] }
+
   redis_password:
+    description: Redis Password
     value: { get_attr: [redis_password, value] }
+
   redis_master_ip:
+    description: Redis Master IP
     value: { get_attr: [redis_master, accessIPv4]}
+
   redis_slave_ips:
+    description: Redis Slave IPs
     value: { get_attr: [redis_slave_nodes, redis_slave_ip] }
+
   redis_port:
+    description: Redis Port
     value: { get_param: redis_port }
+
   sentinel_port:
+    description: Sentinel Port
     value: { get_param: sentinel_port }
