--- a/redis_slave.yaml
+++ b/redis_slave.yaml
@@ -14,10 +14,10 @@ parameters:
     label: Server Image
     description: Operating system to use for created servers
     type: string
-    default: Ubuntu 12.04 LTS (Precise Pangolin)
+    default: Ubuntu 12.04 LTS (Precise Pangolin) (PVHVM)
     constraints:
     - allowed_values:
-      - Ubuntu 12.04 LTS (Precise Pangolin)
+      - Ubuntu 12.04 LTS (Precise Pangolin) (PVHVM)
     description: Must be a supported operating system.
 
   redis_version:
