--- a/tests.yaml
+++ b/tests.yaml
@@ -15,6 +15,7 @@ test-cases:
             key_filename: tmp/private_key
             hosts: { get_output: redis_master_ip } # Fetch from output-list of stack
             tasks:
+              - artifacts
               - check_master
             abort_on_prompts: True
             connection_attempts: 3
@@ -30,6 +31,7 @@ test-cases:
             key_filename: tmp/private_key
             hosts: { get_output: redis_slave_ips } # Fetch from output-list of stack
             tasks:
+              - artifacts
               - check_slave
             abort_on_prompts: True
             connection_attempts: 3
@@ -54,6 +56,7 @@ test-cases:
             key_filename: tmp/private_key
             hosts: { get_output: redis_master_ip }
             tasks:
+              - artifacts
               - check_master
             abort_on_prompts: True
             connection_attempts: 3
@@ -69,6 +72,7 @@ test-cases:
             key_filename: tmp/private_key
             hosts: { get_output: redis_slave_ips } # Fetch from output-list of stack
             tasks:
+              - artifacts
               - check_slave
             abort_on_prompts: True
             connection_attempts: 3
