Rackspace::Cloud::Server is deprecated
so use OS::Nova::Server instead and access private network attributes appropriately.

--- a/redis.yaml
+++ b/redis.yaml
@@ -155,7 +155,7 @@ resources:
       sequence: lettersdigits
 
   redis_master:
-    type: Rackspace::Cloud::Server
+    type: OS::Nova::Server
     depends_on: ssh_key
     properties:
       name: { get_param: redis_master_hostname }
