--- a/redis_slave.yaml
+++ b/redis_slave.yaml
@@ -76,7 +76,7 @@ parameters:
 resources:
 
   redis_slave_server:
-    type: "Rackspace::Cloud::Server"
+    type: "OS::Nova::Server"
     properties:
       name: { get_param: server_hostname }
       flavor: { get_param: flavor }
