--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -28,3 +28,7 @@ instructions: |
   Linux](http://www.rackspace.com/knowledge_center/article/logging-in-with-a-ssh-private-key-on-linuxmac)
   as well as [Windows using
   PuTTY](http://www.rackspace.com/knowledge_center/article/logging-in-with-a-ssh-private-key-on-windows).
+description: |
+  Multiple Linux servers running [redis 2.8.13](http://redis.io/)
+  clustered with a [sentinel](http://redis.io/topics/sentinel)
+  instance on each node.
