--- a/redis.yaml
+++ b/redis.yaml
@@ -65,7 +65,7 @@ parameters:
       Server image used for all servers that are created as a part of this
       deployment
     type: string
-    default: Centos 6 (PVHVM)
+    default: Ubuntu 14.04 LTS (Trusty Tahr) (PVHVM)
     constraints:
     - allowed_values:
       - Ubuntu 12.04 LTS (Precise Pangolin) (PVHVM)
