--- a/redis.yaml
+++ b/redis.yaml
@@ -290,3 +290,28 @@ outputs:
   sentinel_port:
     description: Sentinel Port
     value: { get_param: sentinel_port }
+
+  stdout:
+    description: Ansible Output
+    value:
+      get_attr: [ deploy_redis, deploy_stdout ]
+  stderr:
+    description: Ansible Error Output
+    value:
+      get_attr: [ deploy_redis, deploy_stderr ]
+  status_code:
+    description: Exit Code
+    value:
+      get_attr: [ deploy_redis, deploy_status_code ]
+  role_status_code:
+    description: Exit Code returned from deploying the role to the server
+    value:
+      get_attr: [ deploy_role, deploy_status_code ]
+  server_ip:
+    description: Server IP Address
+    value:
+      get_attr: [ server, accessIPv4 ]
+  server_password:
+    description: Server Password
+    value:
+      get_attr: [ server_pw, value ]
