--- a/redis_slave.yaml
+++ b/redis_slave.yaml
@@ -81,7 +81,7 @@ resources:
     type: "OS::Nova::Server"
     properties:
       name: { get_param: server_hostname }
-      admin_pass: { get_attr: [ server_pw, value ] }
+      admin_pass: { get_attr: [ slave_pw, value ] }
       flavor: { get_param: flavor }
       image: { get_param: image }
       key_name: { get_param: ssh_keypair_name }
