Add password generator for slave.

--- a/redis_slave.yaml
+++ b/redis_slave.yaml
@@ -141,4 +141,4 @@ outputs:
     value: { get_attr: [redis_slave_server, accessIPv4] }
 
   slave_pw:
-    value: { get_attr: [slave_pw, accessIPv4] }
+    value: { get_attr: [slave_pw, value] }
